[metadata]
name = plotting
author = lshuns
author_email = lshuns94@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/lshuns/Plotting
description = to make test plots
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = lshuns/Plotting

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    math
    logging
    matplotlib
    numpy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
plotting = data/*

[tool:pytest]
testpaths = "plotting" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    plotting/_astropy_init*
    plotting/conftest.py
    plotting/*setup_package*
    plotting/tests/*
    plotting/*/tests/*
    plotting/extern/*
    plotting/version*
    */plotting/_astropy_init*
    */plotting/conftest.py
    */plotting/*setup_package*
    */plotting/tests/*
    */plotting/*/tests/*
    */plotting/extern/*
    */plotting/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
